# minicsv

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  sample.csv
.github/workflows/: mac-app-store.yml  release.yml
scripts/: check-editor.mjs  sync-editor.mjs
src/: desktop-bridge.js  index.html
src-tauri/: Cargo.toml  Entitlements.plist.example  tauri.conf.json  tauri.mas.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
