[package]
name = "mathtalking-csv-editor"
version = "0.1.0"
description = "MathTalking CSV Editor desktop app"
authors = ["MathTalking"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-single-instance = "2.4.2"
