[package]
name = "minicsv"
version = "0.1.0"
description = "miniCSV desktop app"
authors = ["Lyncius LLC"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
encoding_rs = "0.8"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-single-instance = "2.4.2"
